[gd_scene load_steps=7 format=4 uid="uid://donikrlq3ny1r"]

[ext_resource type="Script" path="res://scenes/splash_screen.gd" id="1_bntfa"]
[ext_resource type="TileSet" uid="uid://ql3ldccgowc4" path="res://scenes/world.tres" id="1_kxwml"]
[ext_resource type="Texture2D" uid="uid://cxinhwd3uwt5n" path="res://art/character_profiles/light.jpg" id="2_wyjat"]
[ext_resource type="Texture2D" uid="uid://dqilaydwng51q" path="res://art/Interiors_free/play_button.png" id="3_iwmb6"]
[ext_resource type="Texture2D" uid="uid://c4qoj1yuol6jw" path="res://art/Interiors_free/instructions_button.png" id="4_nvvwr"]
[ext_resource type="AudioStream" uid="uid://yhm2wje7d8m4" path="res://art/sound/90x27s-lofi-city-lofi-music-332737.mp3" id="6_o6xj8"]

[node name="splash_screen" type="Node2D"]
script = ExtResource("1_bntfa")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
y_sort_enabled = true
tile_set = ExtResource("1_kxwml")

[node name="ground" type="TileMapLayer" parent="TileMapLayer"]
use_parent_material = true
position = Vector2(0, 4)
tile_map_data = PackedByteArray("AAD//wAABQAhACEAAAD+/wAABQAhACEAAAD9/wAABQAhACEAAAD8/wAABQAhACEAAAD7/wEABQAhACEAAAD7/wIABQAhACEAAAD7/wMABQAhACEAAAD7/wQABQAhACEAAAD7/wUABQAhACEAAAD8/wEABQAiACIAAAD8/wIABQAiACMAAAD8/wMABQAiACMAAAD8/wQABQAiACMAAAD8/wUABQAiACMAAAD7/wAABQALAD4AAAD6/wAABQAKAD0AAAD6/wEABQAdADsAAAD6/wIABQAdADsAAAD6/wMABQAdADsAAAD6/wQABQAdADsAAAD6/wUABQAdADsAAAD7////BQALADsAAAD7//7/BQALADoAAAD6////BQAcADsAAAD6//7/BQAKADoAAAD5//7/BQAJADoAAAD5////BQAJADsAAAD5/wAABQAJADsAAAD5/wEABQAJADsAAAD5/wIABQAJADsAAAD5/wMABQAJADsAAAD5/wQABQAJADsAAAD5/wUABQAJADsAAAD5//3/BQAYAAMAAAD6//3/BQAcAAMAAAD7//3/BQAdAAMAAAD9/wEABQAkACIAAAD+/wEABQAkACIAAAD//wEABQAkACIAAAD6//z/BQAjAAgAAAD6//v/BQAjAAgAAAD7//z/BQAXADwAAAD7//v/BQAYADoAAAD6//r/BQAjAAkAAAD7//r/BQAZAAMAAAD8//r/BQAZAAMAAAD9//r/BQAZAAMAAAD+//r/BQAZAAMAAAD///r/BQAZAAMAAAAAAPr/BQAZAAMAAAABAPr/BQAZAAMAAAD4//3/BQAeAAMAAAD4//7/BQASAAcAAAD4////BQASAAcAAAD4/wAABQASAAcAAAD4/wEABQASAAcAAAD4/wIABQASAAcAAAD4/wMABQASAAcAAAD4/wQABQASAAcAAAD4/wUABQASAAcAAAD8////BQAYAD4AAAD9////BQAYAD4AAAD+////BQAYAD4AAAD/////BQAYAD4AAAAAAP//BQAYAD4AAAABAP//BQAYAD4AAAACAP//BQAYAD4AAAADAP//BQAYAD4AAAAEAP//BQAYAD4AAAAFAP//BQAYAD4AAAAGAP//BQAYAD4AAAAHAP//BQAYAD4AAAAIAP//BQAYAD4AAAAJAP//BQAYAD4AAAAKAP//BQAYAD4AAAD8//7/BQAXADwAAAD9//7/BQAXADwAAAD+//7/BQAXADwAAAD///7/BQAXADwAAAAAAP7/BQAXADwAAAABAP7/BQAXADwAAAACAP7/BQAXADwAAAACAP3/BQAXADwAAAADAP3/BQAXADwAAAAEAP3/BQAXADwAAAAFAP3/BQAXADwAAAAGAP3/BQAXADwAAAAHAP3/BQAXADwAAAAKAP7/BQAXADwAAAAJAP7/BQAXADwAAAAIAP7/BQAXADwAAAAHAP7/BQAXADwAAAAGAP7/BQAXADwAAAAFAP7/BQAXADwAAAAEAP7/BQAXADwAAAADAP7/BQAXADwAAAD8//3/BQAXADwAAAD9//3/BQAXADwAAAD+//3/BQAXADwAAAD///3/BQAXADwAAAAAAP3/BQAXADwAAAABAP3/BQAXADwAAAD8//z/BQAXADwAAAD9//z/BQAXADwAAAD+//z/BQAXADwAAAD///z/BQAXADwAAAAAAPz/BQAXADwAAAABAPz/BQAXADwAAAACAPz/BQAXADwAAAADAPz/BQAXADwAAAAEAPz/BQAXADwAAAAFAPz/BQAXADwAAAAGAPz/BQAXADwAAAAHAPz/BQAXADwAAAAHAPv/BQAYADoAAAAGAPv/BQAYADoAAAAFAPv/BQAYADoAAAAEAPv/BQAYADoAAAADAPv/BQAYADoAAAACAPv/BQAYADoAAAABAPv/BQAYADoAAAAAAPv/BQAYADoAAAD///v/BQAYADoAAAD+//v/BQAYADoAAAD9//v/BQAYADoAAAD8//v/BQAYADoAAAD7/wYABQAhACMAAAD7/wcABQAhACMAAAD7/wgABQAhACMAAAD7/wkABQAhACMAAAD5/wYABQAJADsAAAD5/wcABQAJADsAAAD5/wgABQAJADsAAAD5/wkABQAJADsAAAD6/wYABQALADsAAAD6/wcABQALADsAAAD6/wgABQALADsAAAD6/wkABQALADsAAAD5//r/BQAmAAAAAAD5//v/BQAmAAAAAAD5//z/BQAmAAAAAAD8/wYABQAiACMAAAD8/wcABQAiACMAAAD8/wgABQAiACMAAAD8/wkABQAiACMAAAD9/wIABQAjACMAAAD+/wIABQAjACMAAAD//wIABQAjACMAAAAAAAIABQAjACMAAAABAAIABQAjACMAAAACAAIABQAjACMAAAADAAIABQAjACMAAAAEAAIABQAjACMAAAAFAAIABQAjACMAAAAGAAIABQAjACMAAAAHAAIABQAjACMAAAAIAAIABQAjACMAAAAJAAIABQAjACMAAAAAAAAABQAjACEAAAABAAAABQAjACEAAAACAAAABQAjACEAAAADAAAABQAjACEAAAAEAAAABQAjACEAAAAFAAAABQAjACEAAAAGAAAABQAjACEAAAAHAAAABQAjACEAAAAIAAAABQAjACEAAAAJAAAABQAjACEAAAAKAAAABQAjACEAAAAAAAEABQAjACIAAAABAAEABQAjACIAAAACAAEABQAjACIAAAADAAEABQAjACIAAAAEAAEABQAjACIAAAAFAAEABQAjACIAAAAGAAEABQAjACIAAAAHAAEABQAjACIAAAAIAAEABQAjACIAAAAJAAEABQAjACIAAAAKAAEABQAjACIAAAD4/wYABQAnAAgAAAD4/wcABQAnAAgAAAD4/wgABQAnAAgAAAD4/wkABQAnAAgAAAACAPr/BQAlAAkAAAADAPr/BQAlAAkAAAAEAPr/BQAlAAkAAAAFAPr/BQAlAAkAAAAGAPr/BQAlAAkAAAAHAPr/BQAlAAkAAAAKAAIABQAjACMAAAALAAEABQAnACIAAAALAAAABQAnACEAAAAMAAIABQApACQAAAAMAAEABQApACQAAAALAAIABQAmACQAAAAMAAMABQApACQAAAAMAAQABQApACQAAAAMAAUABQApACQAAAAMAAYABQApACQAAAAMAAcABQApACQAAAAMAAgABQApACQAAAAMAAkABQApACQAAAALAAMABQAmACQAAAALAAQABQAmACQAAAALAAUABQAmACQAAAALAAYABQAmACQAAAALAAcABQAmACQAAAALAAgABQAmACQAAAALAAkABQAmACQAAAD9/wMABQAmACQAAAD+/wMABQAmACQAAAD//wMABQAmACQAAAAAAAMABQAmACQAAAABAAMABQAmACQAAAACAAMABQAmACQAAAADAAMABQAmACQAAAAEAAMABQAmACQAAAAFAAMABQAmACQAAAAGAAMABQAmACQAAAAHAAMABQAmACQAAAAIAAMABQAmACQAAAAJAAMABQAmACQAAAAKAAMABQAmACQAAAD9/wQABQAkACMAAAD+/wQABQAkACMAAAD//wQABQAkACMAAAAAAAQABQAkACMAAAABAAQABQAkACMAAAACAAQABQAkACMAAAADAAQABQAkACMAAAAEAAQABQAkACMAAAAFAAQABQAkACMAAAAGAAQABQAkACMAAAAHAAQABQAkACMAAAAIAAQABQAkACMAAAAJAAQABQAkACMAAAAKAAQABQAkACMAAAAKAAUABQAkACMAAAAJAAUABQAkACMAAAAIAAUABQAkACMAAAAHAAUABQAkACMAAAAGAAUABQAkACMAAAAFAAUABQAkACMAAAAEAAUABQAkACMAAAADAAUABQAkACMAAAACAAUABQAkACMAAAABAAUABQAkACMAAAAAAAUABQAkACMAAAD//wUABQAkACMAAAD+/wUABQAkACMAAAD9/wUABQAkACMAAAD9/wYABQAkACMAAAD+/wYABQAkACMAAAD//wYABQAkACMAAAAAAAYABQAkACMAAAABAAYABQAkACMAAAACAAYABQAkACMAAAADAAYABQAkACMAAAAEAAYABQAkACMAAAAFAAYABQAkACMAAAAGAAYABQAkACMAAAAHAAYABQAkACMAAAAIAAYABQAkACMAAAAJAAYABQAkACMAAAAKAAYABQAkACMAAAAKAAcABQAkACMAAAAJAAcABQAkACMAAAAIAAcABQAkACMAAAAHAAcABQAkACMAAAAGAAcABQAkACMAAAAFAAcABQAkACMAAAAEAAcABQAkACMAAAADAAcABQAkACMAAAACAAcABQAkACMAAAABAAcABQAkACMAAAAAAAcABQAkACMAAAD//wcABQAkACMAAAD+/wcABQAkACMAAAD9/wcABQAkACMAAAD9/wkABQAkACMAAAD+/wkABQAkACMAAAD//wkABQAkACMAAAAAAAkABQAkACMAAAABAAkABQAkACMAAAACAAkABQAkACMAAAADAAkABQAkACMAAAAEAAkABQAkACMAAAAFAAkABQAkACMAAAAGAAkABQAkACMAAAAHAAkABQAkACMAAAAIAAkABQAkACMAAAAJAAkABQAkACMAAAAKAAkABQAkACMAAAAKAAgABQAkACMAAAAJAAgABQAkACMAAAAIAAgABQAkACMAAAAHAAgABQAkACMAAAAGAAgABQAkACMAAAAFAAgABQAkACMAAAAEAAgABQAkACMAAAADAAgABQAkACMAAAACAAgABQAkACMAAAABAAgABQAkACMAAAAAAAgABQAkACMAAAD//wgABQAkACMAAAD+/wgABQAkACMAAAD9/wgABQAkACMAAAAIAPv/BQAYADoAAAAIAPz/BQAaADwAAAAIAP3/BQAaADwAAAAJAPv/BQAYADoAAAAJAPz/BQAaADwAAAAJAP3/BQAaADwAAAAKAPv/BQAYADoAAAAKAPz/BQAaADwAAAAKAP3/BQAaADwAAAAMAAAABQAVAD4AAAAMAP//BQAJADsAAAAMAP7/BQAJADoAAAALAP//BQAKAD4AAAAIAPr/BQAbAAMAAAAJAPr/BQAbAAMAAAAKAPr/BQAbAAMAAAAMAP3/BQAeAAMAAAANAP3/BQAfAAMAAAAOAP3/BQAfAAMAAAAPAP3/BQAjAAMAAAAPAP7/BQAjAAQAAAAPAP//BQAjAAUAAAAPAAAABQAjAAUAAAAPAAEABQAjAAUAAAAPAAIABQAjAAUAAAAPAAMABQAjAAUAAAAPAAQABQAjAAUAAAAPAAUABQAjAAUAAAAPAAYABQAjAAUAAAAPAAcABQAjAAUAAAAPAAgABQAjAAUAAAAPAAkABQAjAAUAAAANAP7/BQAKADoAAAAOAP7/BQALADoAAAAOAP//BQALADsAAAAOAAAABQALADsAAAAOAAEABQALADsAAAAOAAIABQALADsAAAAOAAMABQALADsAAAAOAAQABQALADsAAAAOAAUABQALADsAAAAOAAYABQALADsAAAAOAAcABQALADsAAAAOAAgABQALADsAAAAOAAkABQALADsAAAANAAIABQAJADsAAAANAAMABQAJADsAAAANAAQABQAJADsAAAANAAUABQAJADsAAAANAAYABQAJADsAAAANAAcABQAJADsAAAANAAgABQAJADsAAAANAAkABQAJADsAAAANAP//BQAKADsAAAANAAAABQAKADsAAAANAAEABQAVAD0AAAALAPr/BQAlAAkAAAAMAPr/BQAlAAkAAAANAPr/BQAlAAkAAAAOAPr/BQAnAAkAAAAPAPr/BQAmAAAAAAAOAPv/BQAnAAgAAAAOAPz/BQAnAAgAAAAPAPv/BQAmAAAAAAAPAPz/BQAmAAAAAAALAPv/BQAYADoAAAAMAPv/BQAYADoAAAANAPv/BQAYADoAAAALAPz/BQAYADsAAAAMAPz/BQAYADsAAAANAPz/BQAYADsAAAALAP3/BQAYADsAAAALAP7/BQAYADsAAAD4//r/BQAkAAAAAAD4//v/BQAmAAAAAAD4//z/BQAmAAAAAAD5//n/BQAlAAAAAAD6//n/BQAlAAAAAAD7//n/BQAlAAAAAAD8//n/BQAlAAAAAAD9//n/BQAlAAAAAAD+//n/BQAlAAAAAAD///n/BQAlAAAAAAAAAPn/BQAlAAAAAAABAPn/BQAlAAAAAAACAPn/BQAlAAAAAAADAPn/BQAlAAAAAAAEAPn/BQAlAAAAAAAFAPn/BQAlAAAAAAAGAPn/BQAlAAAAAAAHAPn/BQAlAAAAAAAIAPn/BQAlAAAAAAAJAPn/BQAlAAAAAAAKAPn/BQAlAAAAAAALAPn/BQAlAAAAAAAMAPn/BQAlAAAAAAAPAPn/BQAlAAAAAAAOAPn/BQAlAAAAAAANAPn/BQAlAAAAAAD4//n/BQAlAAAAAAD3//n/BQAkAAAAAAD3//r/BQAkAAAAAAD3//v/BQAkAAAAAAD3//z/BQAkAAAAAAD3//3/BQAkAAAAAAD3//7/BQAkAAAAAAD3////BQAkAAAAAAD3/wAABQAkAAAAAAD3/wEABQAkAAAAAAD3/wIABQAkAAAAAAD3/wMABQAkAAAAAAD3/wQABQAkAAAAAAD3/wUABQAkAAAAAAD3/wYABQAkAAAAAAD3/wcABQAkAAAAAAD3/wgABQAkAAAAAAD3/wkABQAkAAAAAAD2//n/BQAkAAAAAAD2//r/BQAkAAAAAAD2//v/BQAkAAAAAAD2//z/BQAkAAAAAAD2//3/BQAkAAAAAAD2//7/BQAkAAAAAAD2////BQAkAAAAAAD2/wAABQAkAAAAAAD2/wEABQAkAAAAAAD2/wIABQAkAAAAAAD2/wMABQAkAAAAAAD2/wQABQAkAAAAAAD2/wUABQAkAAAAAAD2/wYABQAkAAAAAAD2/wcABQAkAAAAAAD2/wgABQAkAAAAAAD2/wkABQAkAAEAAAAQAPn/BQAmAAAAAAAQAPr/BQAmAAAAAAAQAPv/BQAmAAAAAAAQAPz/BQAmAAAAAAAQAP3/BQAmAAAAAAAQAP7/BQAmAAAAAAAQAP//BQAmAAAAAAAQAAAABQAmAAAAAAAQAAEABQAmAAAAAAAQAAIABQAmAAAAAAAQAAMABQAmAAAAAAAQAAQABQAmAAAAAAAQAAUABQAmAAAAAAAQAAYABQAmAAAAAAAQAAcABQAmAAAAAAAQAAgABQAmAAAAAAAQAAkABQAmAAAAAAARAPr/BQAmAAEAAAARAPv/BQAmAAEAAAARAPz/BQAmAAEAAAARAP3/BQAmAAEAAAARAP7/BQAmAAEAAAARAP//BQAmAAEAAAARAAAABQAmAAEAAAARAAEABQAmAAEAAAARAAIABQAmAAEAAAARAAMABQAmAAEAAAARAAQABQAmAAEAAAARAAUABQAmAAEAAAARAAYABQAmAAEAAAARAAcABQAmAAEAAAARAAgABQAmAAEAAAARAAkABQAmAAEAAAARAPn/BQAmAAEAAAASAPn/BQAmAAIAAAASAPr/BQAmAAIAAAASAPv/BQAmAAIAAAASAPz/BQAmAAIAAAASAP3/BQAmAAIAAAASAP7/BQAmAAIAAAASAP//BQAmAAIAAAASAAAABQAmAAIAAAASAAEABQAmAAIAAAASAAIABQAmAAIAAAASAAMABQAmAAIAAAASAAQABQAmAAIAAAASAAUABQAmAAIAAAASAAYABQAmAAIAAAASAAcABQAmAAIAAAASAAgABQAmAAIAAAASAAkABQAmAAIAAAASAAoABQAmAAIAAAD4/woABQAnAAUAAAD5/woABQAJADsAAAD6/woABQALADsAAAD7/woABQAhACMAAAD8/woABQAiACMAAAD9/woABQAjACMAAAD+/woABQAjACMAAAD//woABQAjACMAAAAAAAoABQAjACMAAAABAAoABQAjACMAAAACAAoABQAjACMAAAADAAoABQAjACMAAAAEAAoABQAjACMAAAAFAAoABQAjACMAAAAGAAoABQAjACMAAAAHAAoABQAjACMAAAAIAAoABQAjACMAAAAJAAoABQAjACMAAAAKAAoABQAjACMAAAALAAoABQAmACQAAAAMAAoABQAnACQAAAANAAoABQAJADsAAAAOAAoABQALADsAAAAPAAoABQAjAAUAAAAQAAoABQAlAAIAAAARAAoABQAlAAIAAAD3/woABQAlAAIAAAD2/woABQAlAAIAAAD2/wsABQAlAAIAAAD3/wsABQAlAAIAAAD4/wsABQAnAAUAAAD5/wsABQAJADsAAAD6/wsABQALADsAAAD7/wsABQAhACMAAAD8/wsABQAiACMAAAD9/wsABQAjACMAAAD+/wsABQAjACMAAAD//wsABQAjACMAAAAAAAsABQAjACMAAAABAAsABQAjACMAAAACAAsABQAjACMAAAADAAsABQAjACMAAAAEAAsABQAjACMAAAAFAAsABQAjACMAAAAGAAsABQAjACMAAAAHAAsABQAjACMAAAAIAAsABQAjACMAAAAJAAsABQAjACMAAAAKAAsABQAjACMAAAALAAsABQAmACQAAAAMAAsABQAnACQAAAANAAsABQAJADsAAAAOAAsABQALADsAAAAPAAsABQAjAAUAAAAQAAsABQAlAAIAAAARAAsABQAlAAIAAAASAAsABQAlAAIAAAD2/wwABQAlAAIAAAD3/wwABQAlAAIAAAD4/wwABQAnAAUAAAD5/wwABQAJADsAAAD6/wwABQALADsAAAD7/wwABQAhACMAAAD8/wwABQAiACMAAAD9/wwABQAjACMAAAD+/wwABQAjACMAAAD//wwABQAjACMAAAAAAAwABQAjACMAAAABAAwABQAjACMAAAACAAwABQAjACMAAAADAAwABQAjACMAAAAEAAwABQAjACMAAAAFAAwABQAjACMAAAAGAAwABQAjACMAAAAHAAwABQAjACMAAAAIAAwABQAjACMAAAAJAAwABQAjACMAAAAKAAwABQAjACMAAAALAAwABQAmACQAAAAMAAwABQAnACQAAAANAAwABQAJADsAAAAOAAwABQALADsAAAAPAAwABQAjAAUAAAAQAAwABQAlAAIAAAARAAwABQAlAAIAAAASAAwABQAlAAIAAAATAAwABQAlAAIAAAATAAsABQAlAAIAAAATAAoABQAlAAIAAAATAAkABQAlAAIAAAATAAgABQAlAAIAAAATAAcABQAlAAIAAAATAAYABQAlAAIAAAATAAUABQAlAAIAAAATAAQABQAlAAIAAAATAAMABQAlAAIAAAATAAIABQAlAAIAAAATAAEABQAlAAIAAAATAAAABQAlAAIAAAATAP//BQAlAAIAAAATAP7/BQAlAAIAAAATAP3/BQAlAAIAAAATAPz/BQAlAAIAAAATAPv/BQAlAAIAAAATAPr/BQAlAAIAAAATAPn/BQAlAAIAAAATAPj/BQAlAAIAAAASAPj/BQAlAAIAAAARAPj/BQAlAAIAAAAQAPj/BQAlAAIAAAAPAPj/BQAlAAIAAAAOAPj/BQAlAAIAAAANAPj/BQAlAAIAAAAMAPj/BQAlAAIAAAALAPj/BQAlAAIAAAAKAPj/BQAlAAIAAAAJAPj/BQAlAAIAAAAIAPj/BQAlAAIAAAAHAPj/BQAlAAIAAAAGAPj/BQAlAAIAAAAFAPj/BQAlAAIAAAAEAPj/BQAlAAIAAAADAPj/BQAlAAIAAAACAPj/BQAlAAIAAAABAPj/BQAlAAIAAAAAAPj/BQAlAAIAAAD///j/BQAlAAIAAAD+//j/BQAlAAIAAAD9//j/BQAlAAIAAAD8//j/BQAlAAIAAAD7//j/BQAlAAIAAAD7//f/BQAlAAIAAAD6//f/BQAlAAIAAAD5//f/BQAlAAIAAAD4//f/BQAlAAIAAAD4//j/BQAlAAIAAAD3//j/BQAlAAIAAAD2//j/BQAlAAIAAAD5//j/BQAlAAIAAAD6//j/BQAlAAIAAAD3//f/BQAlAAIAAAD2//f/BQAlAAIAAAD1//f/BQAlAAIAAAD1//j/BQAlAAIAAAD1//n/BQAlAAIAAAD1//r/BQAlAAIAAAD1//v/BQAlAAIAAAD1//z/BQAlAAIAAAD1//3/BQAlAAIAAAD1//7/BQAlAAIAAAD1////BQAlAAIAAAD1/wAABQAlAAIAAAD1/wEABQAlAAIAAAD1/wIABQAlAAIAAAD1/wMABQAlAAIAAAD1/wQABQAlAAIAAAD1/wUABQAlAAIAAAD1/wYABQAlAAIAAAD1/wcABQAlAAIAAAD1/wgABQAlAAIAAAD1/wkABQAlAAIAAAD1/woABQAlAAIAAAD1/wsABQAlAAIAAAD8//f/BQAlAAIAAAD9//f/BQAlAAIAAAD+//f/BQAlAAIAAAD///f/BQAlAAIAAAAAAPf/BQAlAAIAAAABAPf/BQAlAAIAAAACAPf/BQAlAAIAAAADAPf/BQAlAAIAAAAEAPf/BQAlAAIAAAAFAPf/BQAlAAIAAAAGAPf/BQAlAAIAAAAHAPf/BQAlAAIAAAAIAPf/BQAlAAIAAAAJAPf/BQAlAAIAAAAKAPf/BQAlAAIAAAALAPf/BQAlAAIAAAAMAPf/BQAlAAIAAAANAPf/BQAlAAIAAAAOAPf/BQAlAAIAAAAPAPf/BQAlAAIAAAAQAPf/BQAlAAIAAAARAPf/BQAlAAIAAAASAPf/BQAlAAIAAAATAPf/BQAlAAIAAAD1/wwABQAlAAIAAAAUAPf/BQAlAAIAAAAUAPj/BQAlAAIAAAAUAPn/BQAlAAIAAAAUAPr/BQAlAAIAAAAUAPv/BQAlAAIAAAAUAPz/BQAlAAIAAAAUAP3/BQAlAAIAAAAUAP7/BQAlAAIAAAAUAP//BQAlAAIAAAAUAAAABQAlAAIAAAAUAAEABQAlAAIAAAAUAAIABQAlAAIAAAAUAAMABQAlAAIAAAAUAAQABQAlAAIAAAAUAAUABQAlAAIAAAAUAAYABQAlAAIAAAAUAAcABQAlAAIAAAAUAAgABQAlAAIAAAAUAAkABQAlAAIAAAAUAAoABQAlAAIAAAAUAAsABQAlAAIAAAAUAAwABQAlAAIAAAAVAPf/BQAlAAIAAAAVAPj/BQAlAAIAAAAVAPn/BQAlAAIAAAAVAPr/BQAlAAIAAAAVAPv/BQAlAAIAAAAVAPz/BQAlAAIAAAAVAP3/BQAlAAIAAAAVAP7/BQAlAAIAAAAVAP//BQAlAAIAAAAVAAAABQAlAAIAAAAVAAEABQAlAAIAAAAVAAIABQAlAAIAAAAVAAMABQAlAAIAAAAVAAQABQAlAAIAAAAVAAsABQAlAAIAAAAVAAoABQAlAAIAAAAVAAkABQAlAAIAAAAVAAgABQAlAAIAAAAVAAcABQAlAAIAAAAVAAYABQAlAAIAAAAVAAUABQAlAAIAAAAVAAwABQAlAAIAAAAWAAwABQAlAAIAAAAWAAsABQAlAAIAAAAWAAoABQAlAAIAAAAWAAkABQAlAAIAAAAWAAgABQAlAAIAAAAWAAcABQAlAAIAAAAWAAYABQAlAAIAAAAWAAUABQAlAAIAAAAWAAQABQAlAAIAAAAWAAMABQAlAAIAAAAWAAIABQAlAAIAAAAWAAEABQAlAAIAAAAWAAAABQAlAAIAAAAWAP//BQAlAAIAAAAWAP7/BQAlAAIAAAAWAP3/BQAlAAIAAAAWAPz/BQAlAAIAAAAWAPv/BQAlAAIAAAAWAPr/BQAlAAIAAAAWAPn/BQAlAAIAAAAWAPj/BQAlAAIAAAAWAPf/BQAlAAIAAAD1//b/BQAlAAIAAAD2//b/BQAlAAIAAAD3//b/BQAlAAIAAAD4//b/BQAlAAIAAAD5//b/BQAlAAIAAAD6//b/BQAlAAIAAAD7//b/BQAlAAIAAAD8//b/BQAlAAIAAAD9//b/BQAlAAIAAAD+//b/BQAlAAIAAAD///b/BQAlAAIAAAAAAPb/BQAlAAIAAAABAPb/BQAlAAIAAAACAPb/BQAlAAIAAAADAPb/BQAlAAIAAAAEAPb/BQAlAAIAAAAFAPb/BQAlAAIAAAAGAPb/BQAlAAIAAAAHAPb/BQAlAAIAAAAIAPb/BQAlAAIAAAAJAPb/BQAlAAIAAAAKAPb/BQAlAAIAAAALAPb/BQAlAAIAAAAMAPb/BQAlAAIAAAANAPb/BQAlAAIAAAAOAPb/BQAlAAIAAAAPAPb/BQAlAAIAAAAQAPb/BQAlAAIAAAARAPb/BQAlAAIAAAASAPb/BQAlAAIAAAATAPb/BQAlAAIAAAAUAPb/BQAlAAIAAAAVAPb/BQAlAAIAAAAWAPb/BQAlAAIAAAAWAA0ABQAlAAIAAAAVAA0ABQAlAAIAAAAUAA0ABQAlAAIAAAATAA0ABQAlAAIAAAASAA0ABQAlAAIAAAARAA0ABQAlAAIAAAAQAA0ABQAlAAIAAAAPAA0ABQAjAAUAAAAOAA0ABQALADsAAAANAA0ABQAJADsAAAAMAA0ABQAnACQAAAALAA0ABQAmACQAAAAKAA0ABQAjACMAAAAJAA0ABQAjACMAAAAIAA0ABQAjACMAAAAHAA0ABQAjACMAAAAGAA0ABQAjACMAAAAFAA0ABQAjACMAAAAEAA0ABQAjACMAAAADAA0ABQAjACMAAAACAA0ABQAjACMAAAABAA0ABQAjACMAAAAAAA0ABQAjACMAAAD//w0ABQAjACMAAAD+/w0ABQAjACMAAAD9/w0ABQAjACMAAAD8/w0ABQAiACMAAAD7/w0ABQAhACMAAAD6/w0ABQALADsAAAD5/w0ABQAJADsAAAD4/w0ABQAnAAUAAAD3/w0ABQAlAAIAAAD2/w0ABQAlAAIAAAD1/w0ABQAlAAIAAAD0//b/BQAlAAIAAAD0//f/BQAlAAIAAAD0//j/BQAlAAIAAAD0//n/BQAlAAIAAAD0//r/BQAlAAIAAAD0//v/BQAlAAIAAAD0//z/BQAlAAIAAAD0//3/BQAlAAIAAAD0//7/BQAlAAIAAAD0////BQAlAAIAAAD0/wAABQAlAAIAAAD0/wEABQAlAAIAAAD0/wIABQAlAAIAAAD0/wMABQAlAAIAAAD0/wQABQAlAAIAAAD0/wUABQAlAAIAAAD0/wYABQAlAAIAAAD0/wcABQAlAAIAAAD0/wgABQAlAAIAAAD0/wkABQAlAAIAAAD0/woABQAlAAIAAAD0/wsABQAlAAIAAAD0/wwABQAlAAIAAAD0/w0ABQAlAAIAAADy//j/BQAlAAIAAADy//n/BQAlAAIAAADy//r/BQAlAAIAAADy//v/BQAlAAIAAADy//z/BQAlAAIAAADy//3/BQAlAAIAAADy//7/BQAlAAIAAADy////BQAlAAIAAADy/wAABQAlAAIAAADy/wEABQAlAAIAAADy/wIABQAlAAIAAADy/wMABQAlAAIAAADy/wQABQAlAAIAAADy/wUABQAlAAIAAADy/wYABQAlAAIAAADy/wcABQAlAAIAAADy/wgABQAlAAIAAADy/wkABQAlAAIAAADy/woABQAlAAIAAADy/wsABQAlAAIAAADy/wwABQAlAAIAAADy/w0ABQAlAAIAAADz/w0ABQAlAAIAAADz/wwABQAlAAIAAADz/wsABQAlAAIAAADz/woABQAlAAIAAADz/wkABQAlAAIAAADz/wgABQAlAAIAAADz/wcABQAlAAIAAADz/wYABQAlAAIAAADz/wUABQAlAAIAAADz/wQABQAlAAIAAADz/wMABQAlAAIAAADz/wIABQAlAAIAAADz/wEABQAlAAIAAADz/wAABQAlAAIAAADz////BQAlAAIAAADz//7/BQAlAAIAAADz//3/BQAlAAIAAADz//z/BQAlAAIAAADz//v/BQAlAAIAAADz//r/BQAlAAIAAADz//n/BQAlAAIAAADz//j/BQAlAAIAAADz//f/BQAlAAIAAADy//f/BQAlAAIAAADz//b/BQAlAAIAAADy//b/BQAlAAIAAAA=")
tile_set = ExtResource("1_kxwml")

[node name="ysort" type="TileMapLayer" parent="TileMapLayer"]
z_index = 1
y_sort_enabled = true
use_parent_material = true
tile_map_data = PackedByteArray("AAD+//3/AwAAANkAAAADAP3/AwAYAD0AAAAIAP3/AwAAAN8AAAD//wUAAwAGAJoAAAAIAAUAAwAGAJoAAAA=")
tile_set = ExtResource("1_kxwml")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(69, 39)
zoom = Vector2(5, 5)

[node name="CanvasModulate" type="CanvasModulate" parent="."]
position = Vector2(58, 78)
color = Color(0.627635, 0.627635, 0.627635, 1)

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(56, 24)
scale = Vector2(0.60271, 0.776389)
energy = 0.75
texture = ExtResource("2_wyjat")

[node name="start_button" type="TextureButton" parent="."]
offset_left = 67.0
offset_top = 157.0
offset_right = 145.0
offset_bottom = 197.0
texture_normal = ExtResource("3_iwmb6")

[node name="instructions_button" type="TextureButton" parent="."]
offset_left = -25.0
offset_top = 154.0
offset_right = 64.0
offset_bottom = 193.0
texture_normal = ExtResource("4_nvvwr")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = -15.0
offset_top = 28.0
offset_right = 150.0
offset_bottom = 74.0
theme_override_colors/selection_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_outline_size = 6
theme_override_font_sizes/normal_font_size = 19
text = "SACRED  OBJECTS"
scroll_active = false

[node name="background_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_o6xj8")
autoplay = true

[connection signal="mouse_entered" from="start_button" to="." method="_on_start_button_mouse_entered"]
[connection signal="mouse_exited" from="start_button" to="." method="_on_start_button_mouse_exited"]
[connection signal="pressed" from="start_button" to="." method="_on_start_button_pressed"]
[connection signal="mouse_entered" from="instructions_button" to="." method="_on_instructions_button_mouse_entered"]
[connection signal="mouse_exited" from="instructions_button" to="." method="_on_instructions_button_mouse_exited"]
[connection signal="pressed" from="instructions_button" to="." method="_on_instructions_button_pressed"]
